--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">BasicBurgerBuilder</string>
+    <string name="lugar">¿Donde lo vas a consumir?</string>
 </resources>
